[gd_scene load_steps=2 format=3 uid="uid://dpo7uacswkwhy"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_dtnct"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dtnct")

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 0
offset_left = -131.0
offset_top = -58.0
offset_right = 1360.0
offset_bottom = 721.0
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.5
offset_top = -250.5
offset_right = 183.5
offset_bottom = 250.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 300

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="Standard" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Standard
"

[node name="Virtual Reality" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Virtual Reality
"

[node name="Exit" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.5
offset_top = -81.5
offset_right = 219.5
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 75
text = "Virtual Slate"

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Standard" to="." method="_on_standard_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Virtual Reality" to="." method="_on_virtual_reality_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
